[package]
name = "test_filter_outputs"
version = "0.1.0"
authors = ["Jessica Berg <jb7399@nyu.edu>", "Fabian Ruffy <fruffy@nyu.edu>", "Anirudh Sivaraman <anirudh@cs.nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sim = { path = "../tracing_sim/sim" }
test-case = "1.1.0"
