[package]
name = "test_filter_outputs"
version = "0.1.0"
authors = ["Jessica Berg <jb7399@nyu.edu>", "Fabian Ruffy <fruffy@nyu.edu>", "Anirudh Sivaraman <anirudh@cs.nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
example_envs = { path = "../tracing_sim/example_envs" }
rpc_lib = { path = "../tracing_sim/libs/rpc_lib" }
test-case = "*"
serial_test = "*"
csv = "1.1"

[[bin]]
name = "test_filter_outputs"
path = "src/main.rs"
